[package]
name = "aarch64-paging"
version = "0.9.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A library to manipulate AArch64 VMSA page tables."
authors = [
  "Ard Biesheuvel <ardb@google.com>",
  "Andrew Walbran <qwandor@google.com>",
]
repository = "https://github.com/google/aarch64-paging"
keywords = ["arm", "aarch64", "cortex-a", "vmsa", "pagetable"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
bitflags = "2.6.0"
thiserror = { version = "2.0.3", default-features = false }
zerocopy = { version = "0.8.25", features = ["derive"], optional = true }

[features]
default = ["alloc", "zerocopy"]
alloc = []
zerocopy = ["dep:zerocopy"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-unknown-none"
